--- a/passcode/templates/passcode/password_generator.html
+++ b/passcode/templates/passcode/password_generator.html
@@ -60,9 +60,11 @@
         {% if message == 'DNE' %}
             <b>Oops!</b> There is no passcode for that.
         {% elif message == 'AI' %}
-            <b>Oops!</b> That user is currently voting.
+            <b>Oops!</b> That voter is currently voting.
         {% elif message == 'AV' %}
-            <b>Oops!</b> That user has already voted.
+            <b>Oops!</b> That voter has already voted.
+        {% elif message == 'IE' %}
+            <b>Oops!</b> That voter isn't eligible for this election.
         {% elif message == 'IR' %}
             <b>Oops!</b> You've just made an invalid request.
         {% elif message != '' %}
