Added the long-awaited positions page.

--- a/passcode/templates/passcode/officer-candidate.html
+++ b/passcode/templates/passcode/officer-candidate.html
@@ -43,7 +43,7 @@
 
     <!-- SEARCH BAR-->
     <form action="" id="tab-search">
-        <input id="search" type="text" name="query" placeholder="Search a candidate...">
+        <input id="search" type="text" name="query" placeholder="Search for a candidate...">
     </form>
 
     <!-- DESELECT-DELETE -->
