--- a/passcode/templates/passcode/officer-voter.html
+++ b/passcode/templates/passcode/officer-voter.html
@@ -32,7 +32,7 @@
 
     <!-- SEARCH BAR AND DESELECT-DELETE TAKE UP THE SAME SPOT. THEY ARE ACTIVATED AND DEACTIVATED RESPECTIVELY-->
     <form action="" id="tab-search" method="GET">
-        <input id="search" type="text" name="query" placeholder="Search a voter...">
+        <input id="search" type="text" name="query" placeholder="Search for a voter...">
     </form>
 
     <!-- DESELECT-DELETE -->
