--- a/sysadmin/templates/sysadmin/admin-position.html
+++ b/sysadmin/templates/sysadmin/admin-position.html
@@ -6,7 +6,7 @@
 
     <!-- CSS LINKS -->
     <link rel="stylesheet" type="text/css" href="{% static 'sysadmin/css/components/admin.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'sysadmin/css/components/admin-officer.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'sysadmin/css/components/admin-position.css' %}"/>
 
 </head>
 <body>
@@ -15,9 +15,9 @@
     <img id="header-ballot" src="{% static 'sysadmin/assets/svg/ballot-white.svg' %}">
     <a href="{% url 'sysadmin:voters' %}">Voters List</a>
     <a href="{% url 'sysadmin:candidates' %}">Candidates List</a>
-    <a href="{% url 'sysadmin:officers' %}" id="selected">Comelec Officers</a>
+    <a href="{% url 'sysadmin:officers' %}">Comelec Officers</a>
     <a href="{% url 'sysadmin:units' %}">Units</a>
-    <a href="{% url 'sysadmin:positions' %}">Positions</a>
+    <a href="{% url 'sysadmin:positions' %}" id="selected">Positions</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
         <div id="user-name"> {{ user.first_name }} {{ user.last_name }}</div>
@@ -28,21 +28,21 @@
 
 <!-- TABS BUTTONS TO TRAVERSE THE DIFF SECTIONS -->
 <div id="tab-buttons-container">
-    <button class="tab-buttons" onclick="openTab(event, 'All')" id="tab-all">See all officers</button>
-    <button class="tab-buttons" onclick="openTab(event, 'Add')" id="tab-add">Add an officer</button>
+    <button class="tab-buttons" onclick="openTab(event, 'All')" id="tab-all">See all positions</button>
+    <button class="tab-buttons" onclick="openTab(event, 'Add')" id="tab-add">Add a position</button>
 
     <!-- SEARCH BAR AND DESELECT-DELETE TAKE UP THE SAME SPOT. THEY ARE ACTIVATED AND DEACTIVATED RESPECTIVELY-->
     <form action="" id="tab-search">
-        <input id="search" type="text" name="query" placeholder="Search for an officer...">
+        <input id="search" type="text" name="query" placeholder="Search for a position...">
     </form>
 
     <!-- DESELECT-DELETE -->
     <!--<div id="deselect-delete">
         <button id="deselect">Deselect All</button>-->
-    <form action="" id="delete-officers" method="POST">
+    <form action="" id="delete-units" method="POST">
         {% csrf_token %}
-        <input type="hidden" name="form-type" value="delete-officer">
-        <button type="button" onclick="delete_officers()" id="delete">Delete Selected Officer(s)</button>
+        <input type="hidden" name="form-type" value="delete-unit">
+        <button type="button" onclick="delete_units()" id="delete">Delete Selected Positions(s)</button>
     </form>
     <!--</div>-->
 </div>
@@ -62,34 +62,34 @@
             <!-- FIRST ROW IS HEADER/TITLE ROW. -->
             <div class="table-row row-0">
                 <div class="col-checkbox"><input type="checkbox" id="toggle-all" onclick="toggle(this)"></div>
-                <div class="col-name">Full Name</div>
-                <div class="col-id">Username</div>
-                <div class="col-address">Email Address</div>
+                <div class="col-position">Position type</div>
+                <div class="col-unit">Unit name</div>
             </div>
 
             <!-- TEMPLATES FOR DATA INSERTION. NOTE THAT THERE IS A "row-1" AND "row-2"  FOR THEIR ALTERNATING COLORS -->
-            {% for officer in officers %}
+            {% for position in positions %}
                 <div class="table-row {% cycle 'row-1' 'row-2' %}">
-                    <div class="col-checkbox"><input type="checkbox" name="check" value="{{ officer.id }}"
+                    <div class="col-checkbox"><input type="checkbox" name="check" value="{{ position.id }}"
                                                      onclick="selected(this)"></div>
-                    <div class="col-name">{{ officer.last_name }}, {{ officer.first_name }}</div>
-                    <div class="col-id">{{ officer.username }}</div>
-                    <div class="col-address">{{ officer.email }}</div>
+                    <div class="col-position">
+                        {{ position.base_position.name }}
+                    </div>
+                    <div class="col-unit">{{ position.unit.name }}</div>
                 </div>
             {% endfor %}
         </div>
 
         <div class="pagination">
             <span class="step-links">
-                {% if officers.has_previous %}
+                {% if positions.has_previous %}
                     <a href="?page=1{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">&laquo; first</a>
-                    <a href="?page={{ officers.previous_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">previous</a>
+                    <a href="?page={{ positions.previous_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">previous</a>
                 {% endif %}
-                <span class="current">Page {{ officers.number }} of {{ officers.paginator.num_pages }}.</span>
+                <span class="current">Page {{ positions.number }} of {{ positions.paginator.num_pages }}.</span>
 
-                {% if officers.has_next %}
-                    <a href="?page={{ officers.next_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">next</a>
-                    <a href="?page={{ officers.paginator.num_pages }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">last &raquo;</a>
+                {% if positions.has_next %}
+                    <a href="?page={{ positions.next_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">next</a>
+                    <a href="?page={{ positions.paginator.num_pages }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">last &raquo;</a>
                 {% endif %}
             </span>
         </div>
@@ -97,11 +97,12 @@
 
     <!-- SECOND TAB (FORM TAB)-->
     <form action="" id="Add" class="tab-content" method="POST">
+
         <div class="info-fields-container">
             {% csrf_token %}
-            <input type="hidden" name="form-type" value="add-officer">
-            {% if officer_form %}
-                {% for field in officer_form %}
+            <input type="hidden" name="form-type" value="add-position">
+            {% if position_form %}
+                {% for field in position_form %}
                     <div class="info-container">
                         <div class="info-label">{{ field.label }}</div>
                         {{ field }}
@@ -110,14 +111,13 @@
             {% endif %}
         </div>
 
-
         <div class="info-buttons-container">
             <button class="button cancel">Cancel</button>
-
             <!-- SUBMIT BUTTON FOR THE TAB -->
-            <input class="button confirm" type="submit" value="Add new officer">
+            <input class="button confirm" type="submit" value="Add new position">
         </div>
     </form>
+
 </div>
 
 <div id="logo">
@@ -128,3 +128,5 @@
 <!-- JAVASCRIPT LINK-->
 <script src="{% static 'sysadmin/js/admin.js' %}"></script>
 </html>
+
+
