--- a/sysadmin/templates/sysadmin/admin-voter.html
+++ b/sysadmin/templates/sysadmin/admin-voter.html
@@ -16,7 +16,8 @@
     <a href="{% url 'sysadmin:voters' %}" id="selected">Voters List</a>
     <a href="{% url 'sysadmin:candidates' %}">Candidates List</a>
     <a href="{% url 'sysadmin:officers' %}">Comelec Officers</a>
-    <a href="{% url 'sysadmin:unit' %}">Units</a>
+    <a href="{% url 'sysadmin:units' %}">Units</a>
+    <a href="{% url 'sysadmin:positions' %}">Positions</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
         <div id="user-name"> {{ user.first_name }} {{ user.last_name }}</div>
@@ -32,7 +33,7 @@
 
     <!-- SEARCH BAR AND DESELECT-DELETE TAKE UP THE SAME SPOT. THEY ARE ACTIVATED AND DEACTIVATED RESPECTIVELY-->
     <form action="" id="tab-search" method="GET">
-        <input id="search" type="text" name="query" placeholder="Search a voter...">
+        <input id="search" type="text" name="query" placeholder="Search for a voter...">
     </form>
 
     <!-- DESELECT-DELETE -->
