--- a/passcode/templates/passcode/officer-voter.html
+++ b/passcode/templates/passcode/officer-voter.html
@@ -177,7 +177,6 @@
         </div>
 
         <div class="info-buttons-container">
-            <button class="button cancel">Cancel</button>
             <!-- SUBMIT BUTTON FOR THE TAB -->
             <input class="button confirm" type="submit" value="Add new voter">
         </div>
@@ -213,7 +212,6 @@
         </div>
 
         <div class="info-buttons-container">
-            <button class="button cancel">Cancel</button>
             <!-- SUBMIT BUTTON FOR THE TAB -->
             <input class="button confirm" type="submit" value="Add new voters">
         </div>
@@ -262,7 +260,7 @@
         </div>
 
         <div class="info-buttons-container">
-            <button class="button cancel">Cancel</button>
+            <button type="button" class="button cancel" onclick="resetField()">Cancel</button>
             <!-- SUBMIT BUTTON FOR THE TAB -->
             <input class="button confirm" type="submit" value="Save Changes">
         </div>
