--- a/sysadmin/templates/sysadmin/admin-voter.html
+++ b/sysadmin/templates/sysadmin/admin-voter.html
@@ -178,7 +178,6 @@
         </div>
 
         <div class="info-buttons-container">
-            <button class="button cancel">Cancel</button>
             <!-- SUBMIT BUTTON FOR THE TAB -->
             <input class="button confirm" type="submit" value="Add new voter">
         </div>
@@ -214,7 +213,6 @@
         </div>
 
         <div class="info-buttons-container">
-            <button class="button cancel">Cancel</button>
             <!-- SUBMIT BUTTON FOR THE TAB -->
             <input class="button confirm" type="submit" value="Add new voters">
         </div>
@@ -263,7 +261,7 @@
         </div>
 
         <div class="info-buttons-container">
-            <button class="button cancel">Cancel</button>
+            <button type="button" class="button cancel" onclick="resetField()">Cancel</button>
             <!-- SUBMIT BUTTON FOR THE TAB -->
             <input class="button confirm" type="submit" value="Save Changes">
         </div>
