--- a/sysadmin/templates/sysadmin/admin-officer.html
+++ b/sysadmin/templates/sysadmin/admin-officer.html
@@ -18,6 +18,7 @@
     <a href="{% url 'sysadmin:officers' %}" id="selected">Comelec Officers</a>
     <a href="{% url 'sysadmin:units' %}">Units</a>
     <a href="{% url 'sysadmin:positions' %}">Positions</a>
+    <a href="{% url 'sysadmin:issues' %}">Issues</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
         <div id="user-name"> {{ user.first_name }} {{ user.last_name }}</div>
