Website is now functionally complete.

--- a/passcode/templates/passcode/password_generator.html
+++ b/passcode/templates/passcode/password_generator.html
@@ -58,7 +58,7 @@
 
     <div id="result">
         {% if message == 'DNE' %}
-            <b>Oops!</b> There is no passcode for that.
+            <b>Oops!</b> That voter does not exist.
         {% elif message == 'AI' %}
             <b>Oops!</b> That voter is currently voting.
         {% elif message == 'AV' %}
