--- a/passcode/templates/passcode/officer-results.html
+++ b/passcode/templates/passcode/officer-results.html
@@ -31,6 +31,7 @@
     <button class="tab-buttons" onclick="openTab(event, 'Controls')" id="tab-controls">Election controls</button>
     <button class="tab-buttons" onclick="openTab(event, 'Overview')" id="tab-overview">Overview of votes</button>
     <button class="tab-buttons" onclick="openTab(event, 'Underview')" id="tab-underview">Votes per candidate</button>
+    <button class="tab-buttons" onclick="openTab(event, 'Archive')" id="tab-archive">Archive election results</button>
 
 </div>
 
@@ -311,11 +312,11 @@
                             {% for results in vote_results.values %}
                                 {% for result in results %}
                                     <div class="table-row {% cycle 'row-1' 'row-2' %}">
-                                        <div class="col-position">{{ result.1 }}</div>
-                                        <div class="col-unit">{{ result.2 }}</div>
-                                        <div class="col-name">{{ result.3 }}</div>
-                                        <div class="col-party">{{ result.4 }}</div>
-                                        <div class="col-votes">{{ result.5 }}</div>
+                                        <div class="col-position">{{ result.0 }}</div>
+                                        <div class="col-unit">{{ result.1 }}</div>
+                                        <div class="col-name">{{ result.2 }}</div>
+                                        <div class="col-party">{{ result.3 }}</div>
+                                        <div class="col-votes">{{ result.4 }}</div>
                                     </div>
                                 {% empty %}
                                     No candidates have ran for this position.
@@ -327,24 +328,6 @@
                     </div>
                     <canvas id="piechart">
                     </canvas>
-                    <form method="POST" action="">
-                        <div class="controls-instruction">
-                            Once you're done viewing the election results, reenter your password and click the
-                            <b>archive button</b> to <b>archive</b> the results in a CSV file. Archiving the results
-                            will also clear <i>all</i> votes, voters, candidates, positions, and issues from this
-                            website.
-                        </div>
-                        <div class="controls">
-                            <label class="info-label" for="reauth-archive">Reenter your password</label>
-                            <br>
-                            <input id="reauth-archive" class="password-reauth" type="password" name="reauth-archive"
-                                   required="required">
-                            <br>
-                            <input class="button {% if election_ongoing is False %}confirm{% else %}confirm-negative{% endif %}"
-                                   type="submit"
-                                   value="Archive election results">
-                        </div>
-                    </form>
                 </div>
             </div>
         {% endif %}
@@ -354,6 +337,40 @@
         </div>
     </div>
 
+    <div id="Archive" class="tab-content">
+        {% if election_ongoing is True %}
+            <img id="stop" src="{% static 'passcode/assets/svg/stop.svg' %}">
+            <header>Woah there!</header>
+            <div class="prohibited">
+                You may not archive any results until the elections are done.
+            </div>
+        {% else %}
+            <form method="POST" action="">
+                {% csrf_token %}
+                <input type="hidden" name="form-type" value="archive">
+                <div class="controls-instruction">
+                    Once you're done viewing the election results, reenter your password and click the
+                    <b>archive button</b> to <b>archive</b> <i>all</i> the results to a CSV file. Archiving the
+                    results
+                    will also clear <i>all</i> votes, voters, candidates, batch positions, batch units, and issues from
+                    this website.
+                </div>
+                <div class="controls">
+                    <label class="info-label" for="reauth-archive">Reenter your password</label>
+                    <br>
+                    <input id="reauth-archive" class="password-reauth" type="password" name="reauth-archive"
+                           required="required">
+                    <br>
+                    <input class="button {% if election_ongoing is False %}confirm{% else %}confirm-negative{% endif %}"
+                           type="submit" value="Archive election results">
+                </div>
+            </form>
+        {% endif %}
+
+        <div id="logo">
+            <img width=500 height=50 src="{% static 'passcode/assets/svg/org-logos.svg' %}">
+        </div>
+    </div>
 </div>
 
 
