--- a/sysadmin/templates/sysadmin/admin-candidate.html
+++ b/sysadmin/templates/sysadmin/admin-candidate.html
@@ -167,6 +167,8 @@
                         onchange="set_take('{{ csrf_token }}')">
                     {% for issue in issues %}
                         <option>{{ issue.name }}</option>
+                    {% empty %}
+                        <option disabled="disabled" selected="selected">(no issues yet)</option>
                     {% endfor %}
                 </select>
             </div>
@@ -180,6 +182,8 @@
                         <option>
                             {{ candidate.voter.user.username }}: {{ candidate.voter.user.last_name }}, {{ candidate.voter.user.first_name }}
                         </option>
+                    {% empty %}
+                        <option disabled="disabled" selected="selected">(no candidates yet)</option>
                     {% endfor %}
                 </select>
             </div>
