--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -44,7 +44,7 @@
                 <label for="id-number">ID number</label>
             </div>
             <div class="input-field">
-                <input required="required" type="text" name="password" id="passcode"/>
+                <input required="required" type="password" name="password" id="passcode"/>
                 <label for="passcode">passcode</label>
             </div>
             <input type="submit" hidden="hidden"/>
