--- a/vote/static/vote/css/components/candidates-form.css
+++ b/vote/static/vote/css/components/candidates-form.css
@@ -55,15 +55,12 @@
     border: 0;
     background: none;
     box-shadow: none;
-    border-radius: 8px;
+    border-radius: 3px;
     background-color: var(--theme-green);
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-size: 1rem;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 15px 200px;
     margin-top: 100px;
     margin-bottom: 100px;
     cursor: pointer;
