Added order of appearance of candidates based on priority

--- a/sysadmin/static/sysadmin/css/components/admin-position.css
+++ b/sysadmin/static/sysadmin/css/components/admin-position.css
@@ -1,7 +1,11 @@
 .col-position {
-    flex-basis: 50%;
+    flex-basis: 40%;
 }
 
 .col-unit {
-    flex-basis: 50%;
+    flex-basis: 40%;
+}
+
+.col-priority {
+    flex-basis: 20%;
 }
