--- a/sysadmin/templates/sysadmin/admin-position.html
+++ b/sysadmin/templates/sysadmin/admin-position.html
@@ -65,6 +65,7 @@
                 <div class="col-checkbox"><input type="checkbox" id="toggle-all" onclick="toggle(this)"></div>
                 <div class="col-position">Position type</div>
                 <div class="col-unit">Unit name</div>
+                <div class="col-priority">Order priority</div>
             </div>
 
             <!-- TEMPLATES FOR DATA INSERTION. NOTE THAT THERE IS A "row-1" AND "row-2"  FOR THEIR ALTERNATING COLORS -->
@@ -76,6 +77,7 @@
                         {{ position.base_position.name }}
                     </div>
                     <div class="col-unit">{{ position.unit.name }}</div>
+                    <div class="col-priority">{{ position.priority }}</div>
                 </div>
             {% endfor %}
         </div>
