--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Automated Elections</title>
+    <meta name="viewport" content="height=device-height, initial-scale=1">
 
     <!-- external links for typefaces -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
@@ -44,7 +45,7 @@
                 <label for="id-number">ID number</label>
             </div>
             <div class="input-field">
-                <input required="required" type="password" name="password" id="passcode"/>
+                <input required="required" type="text" name="password" id="passcode"/>
                 <label for="passcode">passcode</label>
             </div>
             <input type="submit" hidden="hidden"/>
