--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Automated Elections</title>
+    <title></title>
     <meta name="viewport" content="height=device-height, initial-scale=1">
 
     <!-- external links for typefaces -->
