--- a/vote/templates/vote/voting.html
+++ b/vote/templates/vote/voting.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Automated Elections</title>
+    <title></title>
 
     <!-- external links for typefaces -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
